# ink_trials

accumulator/: Cargo.toml  lib.rs
ink_mul_trials/: Cargo.toml  accumulator.json  accumulator.wasm  build-all.sh  delegator.json  delegator.wasm  lib.rs
