[package]
name = "delegator"
version = "3.4.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }
ink_prelude = { version = "3", package = "ink_prelude", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

accumulator = { path = "accumulator", default-features = false, features = ["ink-as-dependency"] }


[lib]
name = "delegator"
path = "lib.rs"
crate-type = [
	"cdylib",
]

[features]
default = [
	"std",
]

std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_lang/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",

    "accumulator/std"
]

ink-as-dependency = []

[workspace]
members = [
    "accumulator"
]